# spt-status

./: .gitignore  CHANGELOG.md  LICENSE  flake.nix  hie.yaml  shell.nix  spt-status.cabal
app/: Main.hs
src/: DBusClient.hs  Output.hs  PlayerMetadata.hs  PlayerState.hs  PlayerTime.hs  Polybar.hs  Program.hs  Scroll.hs
test/: PolybarSpec.hs  ScrollSpec.hs  test.hs
